# esp32h2-zigbee-ble-keyboard-ipad-wakeup

./: CMakeLists.txt  README.md  flake.nix  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  esp_hidd_prf_api.c  idf_component.yml  main.cpp
